[package]
name = "headifier"
version = "0.1.3"
edition = "2021"
description = "Add headers to your entire project directory!"
license = "MIT"
repository = "https://github.com/serranoio/headifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.23.0"
wildmatch = "2.1.1"

